--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.9.12",
     "serve-favicon": "^2.5.0",
+    "sharp": "^0.33.5",
     "sitemap": "^8.0.0",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.0.9",
